Authentefication; Fix models
